--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@reown/appkit": "^1.6.0",
+    "@reown/appkit-adapter-wagmi": "^1.6.0",
+    "@tanstack/react-query": "^5.62.7",
     "next": "15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.21.54",
+    "wagmi": "^2.14.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
